--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "abatflix",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://viniciustei.github.io/abatflix",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
