--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           npm install
           npm run-script build
+        env:
+          TMDB_KEY: ${{ secrets.TMDB_KEY }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
