--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -1,6 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
+name: DEPLOY-GH-PAGES-CI/CD
 
 # Controls when the action will run. 
 on:
@@ -9,7 +7,7 @@ on:
     branches: [ master ]
     
 jobs:
-  build-and-deplu:
+  build-and-deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
