--- a/package.json
+++ b/package.json
@@ -43,9 +43,13 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.9",
     "source-map-loader": "^2.0.1",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
     "webpack-cli": "^4.6.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
